RESOLVED FIXED99311
REGRESSION(130613): Reintroduces crashes when using soup's timeout functionality
https://bugs.webkit.org/show_bug.cgi?id=99311
Summary REGRESSION(130613): Reintroduces crashes when using soup's timeout functionality
Dominik Röttsches (drott)
Reported 2012-10-15 05:25:34 PDT
r130613 had + cleanupSoupRequestOperation(handle.get()); in requestTimeoutCallback(gpointer data). This had been intentionally removed in the crash fix bug 98055. While working on XHR2 timeout support, I am hitting this crash again, let's remove it.
Attachments
Patch (1.93 KB, patch)
2012-10-15 05:33 PDT, Dominik Röttsches (drott)
no flags
Dominik Röttsches (drott)
Comment 1 2012-10-15 05:33:28 PDT
Dominik Röttsches (drott)
Comment 2 2012-10-15 07:47:13 PDT
Comment on attachment 168688 [details] Patch Clearing flags on attachment: 168688 Committed r131301: <http://trac.webkit.org/changeset/131301>
Dominik Röttsches (drott)
Comment 3 2012-10-15 07:47:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.