REGRESSION(130613): Reintroduces crashes when using soup's timeout functionality https://bugs.webkit.org/show_bug.cgi?id=99311

Reviewed by Gustavo Noronha Silva.

Removing the cleanupSoupRequestOperation call, since the cancel() call will eventually trigger the
cleanup already setting the right flag. Cleaning the handle already here will result in crashes when
using the soup timeout functionality.
The explicit cleanup call reintroduced in r130613, after it had been previously removed in r130348.

No new tests, tests that catch this will be part of bug 74802 for XHR timeout support.

* platform/network/soup/ResourceHandleSoup.cpp:
(WebCore::requestTimeoutCallback):

Canonical link: https://commits.webkit.org/117268@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131301 268f45cc-cd09-0410-ab3c-d52691b4dbfc